--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 asgiref==3.5.0
+backports.zoneinfo==0.2.1
+black==22.3.0
 CacheControl==0.12.11
 cachetools==5.0.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
-Django==3.2.13
+click==8.1.2
+Django==3.2
+django-cors-headers==3.11.0
 django-filter==21.1
-django-firebase-orm==0.6.1
+django-guid==3.2.2
 djangorestframework==3.13.1
 firebase-admin==5.2.0
 google-api-core==2.7.2
@@ -25,6 +29,10 @@ idna==3.3
 importlib-metadata==4.11.3
 Markdown==3.3.6
 msgpack==1.0.3
+mypy-extensions==0.4.3
+mysqlclient==2.1.0
+pathspec==0.9.0
+platformdirs==2.5.2
 proto-plus==1.20.3
 protobuf==3.20.1
 pyasn1==0.4.8
@@ -35,6 +43,8 @@ requests==2.27.1
 rsa==4.8
 six==1.16.0
 sqlparse==0.4.2
+tomli==2.0.1
+typing-extensions==4.2.0
 uritemplate==4.1.1
 urllib3==1.26.9
 zipp==3.8.0
